[package]
name = "homectl"
authors = ["Miska Tammenpää <miska@tammenpaa.com>"]
version = "0.1.0"
edition = "2021"
license = "GPLv3"
description = "Tools for easily controlling home server functionality"
publish = false

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
itertools = "0.12.1"
log = { version = "0.4.20", features = ["std"] }
nix = { version = "0.27.1", features = ["user"] }
thiserror = "1.0.57"
