[package]
name = "homectl"
authors = ["Miska Tammenpää <miska@tammenpaa.com>"]
version = "0.1.0"
edition = "2021"
license = "GPLv3"
description = "Tools for easily controlling home server functionality"
publish = false

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
dotenv = "0.15.0"
itertools = "0.12.1"
log = { version = "0.4.20", features = ["std"] }
nix = { version = "0.27.1", features = ["user"] }
reqwest = { version = "0.11.24", features = ["blocking", "json"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.114"
thiserror = "1.0.57"

[features]
default = ["minecraft", "git", "habitica"]
minecraft = []
git = []
habitica = []
